so many changes

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -227,3 +227,11 @@ Version 0.1.8	released on 2017/08/29
 
 Version 0.2.0	released on 2017/11/20
 
+
+
+Version 0.2.0	released on 2018/03/02
+
+
+
+Version 0.2.0	released on 2018/03/02
+
